Bug 462088 - Don't show Gwenview in its own "Open With" menu
Summary: Don't show Gwenview in its own "Open With" menu
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.3
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-21 08:47 UTC by popov895
Modified: 2023-05-23 07:43 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04.1
Sentry Crash Report:


Attachments
Gwenview in "Open With" menu (1.18 MB, image/png)
2022-11-21 08:47 UTC, popov895
Details

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2022-11-21 08:47:30 UTC
Created attachment 153914 [details]
Gwenview in "Open With" menu

SUMMARY

It makes no sense to show Gwenview in the "Open With" menu.

STEPS TO REPRODUCE

1. Open any image in Gwenview
2. Right click to open context menu and select "Open With" submenu

SOFTWARE/OS VERSIONS

Operating System: KDE neon 5.26
KDE Plasma Version: 5.26.3
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7
Graphics Platform: X11
Comment 1 Nate Graham 2022-11-29 22:46:27 UTC
haha
Comment 2 Bug Janitor Service 2023-04-19 15:55:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/gwenview/-/merge_requests/193
Comment 3 popov895 2023-04-20 14:30:52 UTC
Git commit 2e6063a831e889ac16e35e1b8c51dae8023da196 by Eugene Popov.
Committed on 19/04/2023 at 15:19.
Pushed by ngraham into branch 'master'.

Don't show Gwenview in its own "Open With" menu

M  +3    -0    app/fileopscontextmanageritem.cpp

https://invent.kde.org/graphics/gwenview/commit/2e6063a831e889ac16e35e1b8c51dae8023da196
Comment 4 Nate Graham 2023-04-20 14:31:35 UTC
Git commit efde317bc20e7c97d5904d9d406a1a205cb14bb9 by Nate Graham, on behalf of Eugene Popov.
Committed on 20/04/2023 at 14:31.
Pushed by ngraham into branch 'release/23.04'.

Don't show Gwenview in its own "Open With" menu


(cherry picked from commit 2e6063a831e889ac16e35e1b8c51dae8023da196)

M  +3    -0    app/fileopscontextmanageritem.cpp

https://invent.kde.org/graphics/gwenview/commit/efde317bc20e7c97d5904d9d406a1a205cb14bb9
Comment 5 phd 2023-04-25 06:42:16 UTC
Actually I use that quite often to duplicate the current window.
How do I do it now?

And is it really worth it for an application to exclude itself from the Open With menu, while sacrificing the uniform content of this menu for each file type?
Comment 6 popov895 2023-04-25 07:25:16 UTC
Please file a new bug report about being able to duplicate the current window.

Jjust out of interest, what's your purpose for duplicating the current window?
Comment 8 Holger 2023-05-14 22:18:19 UTC
(In reply to popov895 from comment #6)
> Please file a new bug report about being able to duplicate the current
> window.
> 
> Jjust out of interest, what's your purpose for duplicating the current
> window?

Posted my use-cases at bug 469179 comment 1
Comment 9 Frank Steinmetzger 2023-05-23 07:43:38 UTC
(In reply to phd from comment #5)
> Actually I use that quite often to duplicate the current window.
> How do I do it now?

Just as a quick idea (I write it here, b/c I couldn’t find a request for it yet): Ctrl+N could be a solution. Just like in a browser or Dolphin, it would open a new window which shows or pre-selects the file that is active in the current window.