Don't show Gwenview in its own "Open With" menu

BUG: 462088